@@ -1,0 +1,3 @@
+Site URL: http://www.uflash.tv
+Contact: http://www.uflash.tv/static/contact
+DMCA: http://www.uflash.tv/static/dmca
